<resources>
    <string name="app_name">Adhyapk</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="welcome_str">Welcome To Adhyapk!</string>
    <string name="login_btn">Login</string>
    <string name="signup">Signup</string>
    <string name="enter_pass">Enter Password</string>
    <string name="enter_email2">Enter Email</string>
    <string name="enter_s_name">Enter Student Name</string>
    <string name="enter_s_number">Enter Student Number</string>
    <string name="enter_teacher_name">Enter Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_contact_phone_no">Enter Contact Phone No.</string>
    <string name="save_profile2">Save Profile</string>
    <string name="save_note2">Save Note</string>
    <string name="batch_name">Batch Name</string>
    <string name="batch_time">Batch Time</string>
    <string name="no_of_students">No. Of Students</string>
    <string name="batch_location">Batch Location</string>
    <string name="no_of_students1">No Of Students</string>
    <string name="batch_location2">Batch Location</string>
    <string name="welcome_to_adhyapk_by">Welcome To ADHYAPK! By...</string>
    <string name="tap_button_below_to_create_new_test_quiz">Tap Button Below To Create New Test/Quiz</string>
</resources>
